Added a test website for testing bootstrap

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -19,83 +19,44 @@
   </head>
 
   <body>
-    <!-- <div class="row red">
-      <div class="col border">
-        col
-      </div>
-      <div class="col border">
-        col
-      </div>
-    </div>
-
-    <div class="row blue">
-      <div class="col-6 border">
-        col-6
-      </div>
-      <div class="col-6 border">
-        col-6
-      </div>
-    </div>
-
-    <div class="row orange">
-      <div class="col-md-6 border">
-        col-md-6
-      </div>
-      <div class="col-md-6 border">
-        col-md-6
-      </div>
-    </div>
-
-    <div class="row light-gray">
-      <div class="col-lg-3 col-md-4 col-sm-6 border">
-        col-lg-3 col-md-4 col-sm-6
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 border">
-        col-lg-3 col-md-4 col-sm-6
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 border">
-        col-lg-3 col-md-4 col-sm-6
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 border">
-        col-lg-3 col-md-4 col-sm-6
-      </div>
-    </div> -->
     <section id="title">
+      <div class="container-fluid">
 
       <!-- Nav Bar -->
       
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="">Tindog</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="">Contact</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="">Pricing</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="">Download</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-      <!-- Title -->
-      <div class="row">
-        <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
+        <!-- Title -->
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>Meet new and interesting dogs nearby.</h1>
+            <button type="button" class="btn btn-primary">Download</button>
+            <button type="button" class="btn btn-outline-primary">Download</button>
+          </div>
+          <div class="col-lg-6">
+            <img src="images/iphone6.png" alt="iphone-mockup">
+          </div>
         </div>
-        <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
-        </div>
+
       </div>
-
     </section>
 
 
