--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -1,227 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Course Material</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Course Material Example Compilation</h1>
-        </header>
-<hr>
-        <main>
+<html>
 
-            <section class="tables">
-                <div class="tables-content content">
-                    <h3 class="section-heading">Tables</h3>
-                    <table class="motorcycle-stats table-general">
-                        <thead>
-                            <tr>
-                                <th>STYLE</th>
-                                <th>Motorcycle</th>
-                                <th>Brand</th>
-                                <th>Engine Size</th>
-                                <th>Horsepower</th>
-                                <th>0-60 time</th>
-                                <th>Top Speed</th>
-                                <th>Comfort Level</th>
-                                <th>Reliability</th>
-                                <th>Price</th>
-                                <th>Preferance</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th class="sport">SPORT</th>
-                                <td>CBR250R</td>
-                                <td>HONDA</td>
-                            </tr>
-                            <tr>
-                                <th class="sport">SPORT</th>
-                                <td>CBR300R</td>
-                                <td>HONDA</td>
-                            </tr>
-                            <tr> 
-                                <th class="sport">SPORT</th>
-                                <td>NINJA 250</td>
-                                <td>KAWASAKI</td>
-                            </tr>
-                            <tr> 
-                                <th class="sport">SPORT</th>
-                                <td>NINJA 300</td>
-                                <td>KAWASAKI</td>
-                            </tr>
-                            <tr> 
-                                <th class="sport">SPORT</th>
-                                <td>NINJA 400</td>
-                                <td>KAWASAKI</td>
-                            </tr>
-                            <tr>
-                                <th class="dualsport">DUAL SPORT</th>
-                                <td>CRF250L</td>
-                                <td>HONDA</td>
-                                <td>249.6cc</td>
-                                <td>24.8hp</td>
-                                <td>8.6s</td>
-                                <td>130kph / 80mph</td>
-                                <td>⭐⭐⭐☆☆</td>
-                                <td>⭐⭐⭐⭐⭐</td>
-                                <td>$5600</td>
-                                <td>⭐⭐⭐⭐⭐⭐⭐☆☆☆</td>
-                            </tr>
-                            <tr>
-                                <th class="dualsport">DUAL SPORT</th>
-                                <td>CRF300L</td>
-                                <td>HONDA</td>
-                                <td>286.00cc</td>
-                                <td>27.3hp</td>
-                                <td>?</td>
-                                <td>?</td>
-                                <td>⭐⭐☆☆☆</td>
-                                <td>⭐⭐⭐⭐⭐</td>
-                                <td>$7703</td>
-                                <td>⭐⭐⭐⭐⭐⭐⭐⭐☆☆</td>
-                            </tr>
-                            <tr> 
-                                <th class="dualsport">DUAL SPORT</th>
-                                <td>CRF300L RALLY</td>
-                                <td>HONDA</td>
-                                <td>286.00cc</td>
-                                <td>27.3hp</td>
-                                <td>?</td>
-                                <td>?</td>
-                                <td>⭐⭐☆☆☆</td>
-                                <td>⭐⭐⭐⭐⭐</td>
-                                <td>$8903</td>
-                                <td>⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐</td>
-                            </tr>
-                            <tr>
-                                <th class="standard">STANDARD</th>
-                                <td>CBR300R</td>
-                                <td>HONDA</td>
-                            </tr>
-                            <tr>
-                                <th class="standard">STANDARD</th>
-                                <td>Z400</td>
-                                <td>KAWASAKI</td>
-                            </tr>
+  <head>
+    <meta charset="utf-8">
+    <title>Test Website</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-                        </tbody>
-                    </table>
-                </div>
-            </section>
-        <hr>
-            <section class="forms">
-                <div class="forms-content content">
-                    <h3 class="section-heading">Forms</h3>
-                    <br>
-                    <div class="white-box form-email">
-                        <h4>Email Form</h4>
-                        <div class="description">
-                            <div class="description-item">
-                                <p class="description-topic">"action=mailto:emailAddress@gmail.com":</p>
-                                </p>Opens your email client with a fresh editor ready to send an email <em>FROM</em> the supplied email address.</p>
-                            </div>
-                            <div class="description-item">
-                                <p class="description-topic">"method="post":</p>
-                                <p>Fills that blank email with the supplied information</p>
-                            </div>
-                        </div>
-                            <!-- set 'enctype' or your text won't display properly in the email -->
-                            <form action="mailto:info@myemail.com" method="post" enctype="text/plain">
-                            <br>
-                                <label for="yourName">Name:</label>
-                                <input type="text" name="yourName" id="yourName"> 
-                            <br>
-                                <label for="yourEmail">Email:</label>
-                                <!-- input type set to email runs checks automatically to make sure it is a propper email address -->
-                                <input type="yourEmail" name="yourEmail" id="yourEmail">
-                            <br>
-                                <label for="yourMessage">Your Message:</label>
-                            <br>
-                                <textarea name="yourMessage" id="yourMessage" cols="30" rows="10"></textarea>
-                            <br>
-                                <input type="submit" name="submit" id="submit" value="submit">
-                            </form>
-                    </div>
-                        <br>
-                    <div class="white-box form-signup">
-                        <h4>Form Options</h4>
-                        <form action="">
-                            <label for="color">Choose a Color:</label>
-                            <input type="color" name="color" id="color" value="ff0000">
-                        <hr>
-                            <label for="scrollMenu">Scroll Menu</label>
-                            <br>
-                            <select multiple name="scrollMenu" size="5">
-                            <!-- use "size" to set the number of visible options in the scroll menu -->
-                                <option value="crf250l">CRF-250L</option>
-                                <option value="klx250x">KLX-250S</option>
-                                <option value="gsx250r">GSX-250r</option>
-                                <option value="yzf-r3">YZF-R3</option>
-                                <option value="ninja300">NINJA300</option>
-                                <option value="ninja400">NINJA 400</option>
-                            </select>
-                        <hr>
-                            <label for="name">Select Name(drop-down menu</label>
-                            <select name="name" id="name">
-                                <option value="bob">Bob</option>
-                                <option value="sam">Sam</option>
-                                <option value="dillon">Dillon</option>
-                            </select>
-                        <hr>
-                            <fieldset disabled>
-                                <!-- <h5>This element is currently dissabled</h5>
-                                <p>If you make a selection dissable certain other selections you could make a complex menu</p>
-                                <p>For example: you only have certain color choices on some bikes, so when you choose the bike, the unavailable color choices will be dissabled</p> -->
-                                <legend>Choose your Favorite Color</legend>
-                                <label for="purple">Purple</label>
-                                <input type="radio" name="colors" id="purple">
-                                <br>
-                                <label for="green">Green</label>
-                                <input type="radio" name="colors" id="green">
-                                <br>
-                                <label for="yellow">Yellow</label>
-                                <input type="radio" name="colors" id="yellow">
-                            </fieldset>
+    <!-- The two links below are for Montserrat fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
+    <!-- The two links above are for Montserrat fonts -->
+
+    <!-- The two links below are for Ubuntu fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- The two links above are for Ubuntu fonts -->
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
+      <div class="container cont">
+          <p>This is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stuffffffffffffffffffThis is some text and stuff</p>
+
+      </div>
+      <div class="container-fluid cont">
+          <p>This is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stuffffffffffffffffffThis is some text and stuff</p>
+
+      </div>
+
+      
 
 
-                        </form>
-                    </div>
-                </div>
-            </section>
-        <hr>
-            <section class="bacon">
-                <div class="bacon-content content">
-                    <h3>Background Colors</h3>
-                    <div class="white-box bacon-white-box">
-                        <h1 id="heading">I Love Bacon</h1>
-                        <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-                        <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-                        <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
-                        <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img" class="igood">
-                        <h1>I also Love Motorcycles</h1>
-                        <p>motorcycle, motorcycle, motorcycle, motorcycle, motorcycle</p>
-                        <p>motorcycle, motorcycle, motorcycle, motorcycle, motorcycle</p>
-                        <p>motorcycle, motorcycle, motorcycle, motorcycle, motorcycle</p>
-                        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/279/motorcycle_1f3cd-fe0f.png" alt="motorcycle" class="igood">
-                        <h1>I don't like eggplant</h1>
-                        <p>eggplant, eggplant, eggplant</p>
-                        <p>eggplant, eggplant, eggplant</p>
-                        <p>eggplant, eggplant, eggplant</p>
-                        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/whatsapp/116/aubergine_1f346.png" alt="eggplant-img" class="ibad eggplant circular">
-                    </div>
-                </div>
-            </section>
+    <!-- Footer -->
 
-        </main>
-<hr>
-        <footer>
-            <p>Return to <a href="../index.html"><strong>main page</strong></a></p>
-        </footer>
-        <script src="js/scripts.js"></script>
-    </body>
+    <footer id="footer">
+
+      <p>© Copyright 2018 TinDog</p>
+
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+  </body>
+
 </html>
