--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -4,18 +4,20 @@
   <head>
     <meta charset="utf-8">
     <title>TinDog</title>
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <!-- The two links below are for Montserrat fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
-    <!-- The two links above are for Montserrat fonts -->
-
-    <!-- The two links below are for Ubuntu fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <!-- The two links above are for Ubuntu fonts -->
+
+    <!-- Style Sheets -->
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/740510e010.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
@@ -48,8 +50,8 @@
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-primary">Download</button>
-            <button type="button" class="btn btn-outline-primary">Download</button>
+            <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download 1</button>
+            <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download 2</button>
           </div>
           <div class="col-lg-6">
             <img src="images/iphone6.png" alt="iphone-mockup">
