--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -3,44 +3,56 @@
 
   <head>
     <meta charset="utf-8">
-    <title>TinDog</title>
+    <title>tindog</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/740510e010.js" crossorigin="anonymous"></script>
 
     <!-- Style Sheets -->
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/740510e010.js" crossorigin="anonymous"></script>
 
   </head>
 
   <body>
     <section id="title">
-      <div class="container-fluid">
+      <div class="container-fluid title-containter">
 
-      <!-- Nav Bar -->
-      
+        <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="">Tindog</a>
+          <!-- brand name -->
+          <a class="navbar-brand" href="">
+            tindog
+          </a>
+          <!-- navbar toggler -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <!-- nav items -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
+
               <li class="nav-item">
-                  <a class="nav-link" href="">Contact</a>
+                  <a class="nav-link" href="">
+                    Contact
+                  </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Pricing</a>
+                  <a class="nav-link" href="">
+                    Pricing
+                  </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">Download</a>
+                  <a class="nav-link" href="">
+                    Download
+                  </a>
               </li>
             </ul>
           </div>
@@ -48,17 +60,27 @@
 
         <!-- Title -->
         <div class="row">
-          <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download 1</button>
-            <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download 2</button>
+
+          <div class="col-lg-6 button-group">
+            <h1 class="intro">
+              Meet new and interesting dogs nearby.
+            </h1>
+            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+              Download 1
+            </button>
+            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
+              Download 2
+            </button>
           </div>
+
           <div class="col-lg-6">
-            <img src="images/iphone6.png" alt="iphone-mockup">
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
           </div>
+
         </div>
 
       </div>
+      
     </section>
 
 
@@ -96,7 +118,8 @@
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo">
+      <!-- techcrunch image broken link -->
+      <!-- <img src="images/techcrunch.png" alt="tc-logo"> -->
       <img src="images/tnw.png" alt="tnw-logo">
       <img src="images/bizinsider.png" alt="biz-insider-logo">
       <img src="images/mashable.png" alt="mashable-logo">
@@ -160,6 +183,8 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+    <script src="js/scripts.js"></script>
 
   </body>
 
