--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -87,11 +87,11 @@
     <!-- Features -->
 
     <section id="features">
-      <div class="row container-fluid">
+      <div class="row">
 
         <div class="col-lg-4 feature">
           <div class="text-center">
-            <i class="fas fa-check-circle fa-3x features-icon"></i>
+            <i class="fas fa-check-circle fa-4x features-icon"></i>
           </div>
           <h3>Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
@@ -99,7 +99,7 @@
 
         <div class="col-lg-4 feature">
           <div class="text-center">
-            <i class="fas fa-bullseye fa-3x features-icon"></i>
+            <i class="fas fa-bullseye fa-4x features-icon"></i>
           </div>
           <h3>Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
@@ -107,7 +107,7 @@
       
         <div class="col-lg-4 feature">
           <div class="text-center">
-            <i class="fas fa-heart fa-3x features-icon"></i>
+            <i class="fas fa-heart fa-4x features-icon"></i>
           </div>
           <h3>Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
