--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -20,11 +20,19 @@
 
   <body>
       <div class="container cont">
-          <p>This is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stuffffffffffffffffffThis is some text and stuff</p>
+        <p>Number <span class="changeable" id="firstnum">1</span></p>
+        <p>Number <span class="changeable" id="secondletter">2</span></p>
+        <p>Number <span class="changeable" id="thirdletter">3</span></p>
+        <p>Number <span class="changeable" id="fourthletter">4</span></p>
+        <p>Number <span class="changeable" id="fifthletter">5</span></p>
 
       </div>
       <div class="container-fluid cont">
-          <p>This is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stufThis is some text and stuffffffffffffffffffThis is some text and stuff</p>
+        <p>Letter <span class="changeable" id="firstletter">a</span></p>
+        <p>Letter <span class="changeable" id="secondletter">b</span></p>
+        <p>Letter <span class="changeable" id="thirdletter">c</span></p>
+        <p>Letter <span class="changeable" id="fourthletter">d</span></p>
+        <p>Letter <span class="changeable" id="fifthletter">e</span></p>
 
       </div>
 
@@ -41,6 +49,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 
   </body>
 
