fixed the carousel. No longer auto slides when your mouse leaves the window.

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -121,16 +121,15 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <div id="testimoni" class="carousel slide" data-ride="carousel" data-interval="2000">
-
+      <div id="testimoni" class="carousel slide" data-interval="false" data-pause="hover">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#testimoni" data-slide-to="0" class="active"></li>
+          <li data-target="#testimoni" data-slide-to="1"></li>
           <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
         </ol>
 
         <div class="carousel-inner">
-          <div class="carousel-item active testi" >
+          <div class="carousel-item testi active" >
             <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
             <em>Pebbles, New York</em>
@@ -142,12 +141,12 @@
             <em>Beverly, Illinois</em>
           </div>
 
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#testimoni" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
 
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#testimoni" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -155,14 +154,7 @@
         </div>
       </div>
 
-      <div class="carousel-inner">
-
-      </div>
-
-
-
     </section>
-
 
     <!-- Press -->
 
