--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -120,39 +120,48 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
-      <div id="testimoni" class="carousel slide" data-interval="false" data-pause="hover">
-        <ol class="carousel-indicators">
-          <li data-target="#testimoni" data-slide-to="0" class="active"></li>
-          <li data-target="#testimoni" data-slide-to="1"></li>
-          <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
-        </ol>
+    <!-- <section id="testimonials"> -->
+    <section id="testimonial-carousel" class="carousel slide" data-interval="false" data-pause="hover">
+      <ol class="carousel-indicators">
+        <li data-target="#testimoni" data-slide-to="0" class="active"></li>
+        <li data-target="#testimoni" data-slide-to="1"></li>
+        <li data-target="#testimoni" data-slide-to="2"></li>
+        <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
+      </ol>
 
-        <div class="carousel-inner">
-          <div class="carousel-item testi active" >
-            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-            <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
-            <em>Pebbles, New York</em>
-          </div>
-
-          <div class="carousel-item testi">
-            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-            <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-            <em>Beverly, Illinois</em>
-          </div>
-
-          <a class="carousel-control-prev" href="#testimoni" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-
-          <a class="carousel-control-next" href="#testimoni" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-
+      <div class="carousel-inner">
+        <div class="carousel-item testi active" >
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+          <em>Pebbles, New York</em>
         </div>
+
+        <div class="carousel-item testi">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+
+        <div class="carousel-item testi">
+          <h2 class="testimonial-text">I'm Maru! I'm a cute black and white tabby with TONS of Energy.</h2>
+          <img class="testimonial-image" src="images/maru.jpg" alt="maru-profile">
+          <em>Maru Little Bean Mullet Pom Pom Leader Chibi McIntyre, British Columbia Canada</em>
+        </div>
+
+        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+          <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
+          <span class="carousel-control-prev-icon"></span>
+          <!-- <span class="sr-only">Previous</span> -->
+        </a>
+
+        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+          <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
+          <span class="carousel-control-next-icon"></span>
+          <!-- <span class="sr-only">Next</span> -->
+        </a>
+
       </div>
+      <!-- </div> -->
 
     </section>
 
@@ -171,34 +180,61 @@
     <!-- Pricing -->
 
     <section id="pricing">
+      
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+        <h1 class="display-4">A Plan for Every Dog's Needs</h1>
+        <p class="lead">Simple and affordable price plans for your and your dog.</p>
+      </div>
+
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
+            <h3>Chihuahua</h3>
+            <h2>Free</h2>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li> <p>5 Matches Per Day</p> </li>
+              <li> <p>10 Messages Per Day</p> </li>
+              <li> <p>Unlimited App Usage</p> </li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h3>Labrador</h3>
+            <h2>$49 / mo</h2>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li> <p>Unlimited Matches</p> </li>
+              <li> <p>Unlimited Messages</p> </li>
+              <li> <p>Unlimited App Usage</p> </li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+            <h2>$99 / mo</h2>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-      <h3>Chihuahua</h3>
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-
-      <h3>Labrador</h3>
-      <h2>$49 / mo</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-
-      <h3>Mastiff</h3>
-      <h2>$99 / mo</h2>
-      <p>Pirority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
 
     </section>
 
