--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -180,61 +180,66 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      
-      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">A Plan for Every Dog's Needs</h1>
         <p class="lead">Simple and affordable price plans for your and your dog.</p>
       </div>
 
-      <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
-            <h3>Chihuahua</h3>
-            <h2>Free</h2>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
-              <li> <p>5 Matches Per Day</p> </li>
-              <li> <p>10 Messages Per Day</p> </li>
-              <li> <p>Unlimited App Usage</p> </li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
-          </div>
-        </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h3>Labrador</h3>
-            <h2>$49 / mo</h2>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
-              <li> <p>Unlimited Matches</p> </li>
-              <li> <p>Unlimited Messages</p> </li>
-              <li> <p>Unlimited App Usage</p> </li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+
+      <div class="row text-center">
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
+              <h3>Chihuahua</h3>
+              <h2>Free</h2>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-3 mb-4">
+                <li> <p>5 Matches Per Day</p> </li>
+                <li> <p>10 Messages Per Day</p> </li>
+                <li> <p>Unlimited App Usage</p> </li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+            </div>
           </div>
         </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h3>Mastiff</h3>
-            <h2>$99 / mo</h2>
-          </div>
-          <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
-              <p>Pirority Listing</p>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h3>Labrador</h3>
+              <h2>$49 / mo</h2>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-3 mb-4">
+                <li> <p>Unlimited Matches</p> </li>
+                <li> <p>Unlimited Messages</p> </li>
+                <li> <p>Unlimited App Usage</p> </li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+            </div>
           </div>
         </div>
+        <div class="col-md-12 col-lg-4">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+              <h2>$99 / mo</h2>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled mt-3 mb-4">
+                <p>Pirority Listing</p>
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div> 
+
       </div>
-
-
 
     </section>
 
