finished z-index section

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -248,8 +248,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="cta-button btn btn-lg btn-outline-dark">Download</button>
+    <button type="button" class="cta-button btn btn-lg btn-dark">Download</button>
 
   </section>
 
@@ -261,6 +261,13 @@
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
+  
+  <div class="test-div">
+    <div class="test-box red">red</div>
+    <div class="test-box yellow">yellow</div>
+    <div class="test-box blue">blue</div>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
