--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -266,6 +266,7 @@
     <div class="test-box red">red</div>
     <div class="test-box yellow">yellow</div>
     <div class="test-box blue">blue</div>
+    <div class="test-box blue">blue</div>
   </div>
 
 
