finished tindog site pre checkin with course

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -63,7 +63,7 @@
       </nav>
 
       <!-- Title -->
-      <div class="row">
+      <div class="row" id="title">
 
         <div class="col-lg-6 button-group">
           <h1 class="intro">
@@ -72,7 +72,7 @@
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
             Download 1
           </button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
             Download 2
           </button>
         </div>
@@ -247,7 +247,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h2>Find the True Love of Your Dog's Life Today.</h2>
     <button type="button" class="cta-button btn btn-lg btn-outline-dark">Download</button>
     <button type="button" class="cta-button btn btn-lg btn-dark">Download</button>
 
@@ -257,17 +257,12 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <p><i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fas fa-envelope"></i></p>
 
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
   
-  <div class="test-div">
-    <div class="test-box red">red</div>
-    <div class="test-box yellow">yellow</div>
-    <div class="test-box blue">blue</div>
-  </div>
-
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
