refactoring css code

--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -44,17 +44,17 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="#footer">
                 Contact
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="#pricing">
                 Pricing
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="#cta">
                 Download
               </a>
             </li>
@@ -66,13 +66,13 @@
       <div class="row" id="title">
 
         <div class="col-lg-6 button-group">
-          <h1 class="intro">
+          <h1 class="intro-heading">
             Meet new and interesting dogs nearby.
           </h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
             Download 1
           </button>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+          <button type="button" class="btn btn-outline-dark btn-lg download-button"><i class="fab fa-google-play"></i>
             Download 2
           </button>
         </div>
@@ -247,9 +247,9 @@
 
   <section id="cta">
 
-    <h2>Find the True Love of Your Dog's Life Today.</h2>
-    <button type="button" class="cta-button btn btn-lg btn-outline-dark">Download</button>
-    <button type="button" class="cta-button btn btn-lg btn-dark">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="cta-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="cta-button btn btn-lg btn-light"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
