--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -32,7 +32,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- brand name -->
         <a class="navbar-brand" href="">
-          tindog
+          <h1>tindog</h1>
         </a>
         <!-- navbar toggler -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -66,9 +66,9 @@
       <div class="row" id="title">
 
         <div class="col-lg-6 button-group">
-          <h1 class="intro-heading">
+          <h2 class="intro-heading">
             Meet new and interesting dogs nearby.
-          </h1>
+          </h2>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
             Download 1
           </button>
@@ -187,7 +187,7 @@
   <section id="pricing">
 
     <div class="text-center pricing-header">
-      <h1>A Plan for Every Dog's Needs</h1>
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
     </div>
 
@@ -196,28 +196,31 @@
       <div class="col-md-6 col-lg-4 pricing-column">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
-            <h3>Chihuahua</h3>
-            <h2>Free</h2>
+            <h3 class="pricing-card-heading">Chihuahua</h3>
+            <p class="pricing-price">FREE</p>
           </div>
           <div class="card-body">
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+            <br>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 pricing-column">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h3>Labrador</h3>
-            <h2>$49 / mo</h2>
+            <h3 class="pricing-card-heading">Labrador</h3>
+            <p class="pricing-price">$49 / mo</p>
+
           </div>
           <div class="card-body">
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
+            <br>
+
             <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
           </div>
         </div>
@@ -225,8 +228,8 @@
       <div class="col-md-12 col-lg-4 pricing-column">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h3>Mastiff</h3>
-            <h2>$99 / mo</h2>
+            <h3 class="pricing-card-heading">Mastiff</h3>
+            <p class="pricing-price">$99 / mo</p>
           </div>
           <div class="card-body">
             <p>Pirority Listing</p>
