--- a/classproject/006colorTheoryAndDesign/index.html
+++ b/classproject/006colorTheoryAndDesign/index.html
@@ -31,6 +31,7 @@
                     <li>Energy</li>
                     <li>Intensity</li>
                 </ul>
+                <button class="card-button" type="button">Click Here</button>
             </div>
 
             <div class="card">
@@ -42,6 +43,7 @@
                     <li>Intelect</li>
                     <li>Attention</li>
                 </ul>
+                <button class="card-button" type="button">Click Here</button>
             </div>
 
             <div class="card">
@@ -53,6 +55,7 @@
                     <li>Safety</li>
                     <li>Growth</li>
                 </ul>
+                <button class="card-button" type="button">Click Here</button>
             </div>
 
             <div class="card">
@@ -64,6 +67,7 @@
                     <li>Trust</li>
                     <li>Serenity</li>
                 </ul>
+                <button class="card-button" type="button">Click Here</button>
             </div>
 
             <div class="card">
@@ -75,9 +79,20 @@
                     <li>Wealth</li>
                     <li>Femeninity</li>
                 </ul>
+                <button class="card-button" type="button">Click Here</button>
             </div>
 
         </div>
+
+    </section>
+
+    <section id="choosing-colors" class="choosing-colors">
+        <h1>How to choose colors</h1>
+        <h3>*note* do not use these methods with text!!!</h3>
+        <ul class="choosing-colors-list">
+            <li>Using colors that are next to each other on the color wheel</li>
+            <li>Using colors opposite each other on the color wheel</li>
+        </ul>
 
     </section>
 
