--- a/classprojects/000Testing/index.html
+++ b/classprojects/000Testing/index.html
@@ -2,30 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Testing</title>
 </head>
 <body>
   <header>
-    <h1 class="brand">Test Brand</h1>
-    <p class="mission-statement">Mission Statement</p>
-    <div class="commitments">
-      <ul class="commitments-list">
-        <li class="commitments-list-item">item</li>
-        <li class="commitments-list-item">item</li>
-        <li class="commitments-list-item">item</li>
+    <h1 class="brand">Testing</h1>
+    <nav>
+      <ul>
+        <li>Nav</li>
+        <li>NextNav</li>
+        <li>OtherNav</li>
       </ul>
-    </div>
+    </nav>
   </header>
+
   <main>
-    <section class="first">
-      <h2 class="first-header">First Header</h2>
-      <p>Amet nesciunt veritatis aperiam rem dignissimos. Deleniti obcaecati rerum labore consequuntur magnam Nobis officia dignissimos quis vero repellat Ratione maiores</p>
-    </section>
+
   </main>
+
   <footer>
-    footer
+    footer stuff goes here
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
