--- a/myprojects/benFranklin/index.html
+++ b/myprojects/benFranklin/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <header class="main-header">
         <h1 class="hero-heading">Benjamin Franklin's Journal</h1>
         <nav>
           <div class="nav-item">item1</div>
@@ -18,9 +18,20 @@
       <section class="tracker">
         <form class="tracker-chart" action="">
           <table>
-            <caption class="heading-two">Virture Tracker Chart</caption>
+            <header>
+              <h2 class="heading-two">Virture Tracker Chart</h2>
+            </header>
             <tr class="first-row">
-              <th></th>
+              <th>
+                <div class="week-selector">
+                  <label for="week">Week</label>
+                  <select id="week" name="week">
+                    <option value="oct24">October 24</option>
+                    <option value="oct31">October 31</option>
+                    <option value="nov07">November 07</option>
+                  </select>
+                </div>
+              </th>
               <th>Sunday</th>
               <th>Monday</th>
               <th>Tuesday</th>
@@ -31,133 +42,133 @@
             </tr>
             <tr>
               <th>TEMPERANCE</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>SILENCE</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>ORDER</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>RESOLUTION</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>FRUGALITY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>INDUSTRY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>SINCERITY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>JUSTICE</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>MODERATION</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>CLEANLINESS</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>TRANQUILITY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>CHASTITY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
             <tr>
               <th>HUMILITY</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
+              <td><input type="text-area"></td>
             </tr>
           </table>
         </form>
