--- a/myprojects/benFranklin/index.html
+++ b/myprojects/benFranklin/index.html
@@ -19,7 +19,8 @@
         <form class="tracker-chart" action="">
           <table>
             <header>
-              <h2 class="heading-two">Virture Tracker Chart</h2>
+              <h2 class="heading-two underline">Virture Tracker Chart</h2>
+              <button class="clear">Clear</button>
             </header>
             <tr class="first-row">
               <th>
